# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,9 @@ import locationsRouter from "./locations";
 import attendanceRouter from "./attendance";
 import dashboardRouter from "./dashboard";
 
+import { leavesRouter } from "./leaves";
+import { notificationsRouter } from "./notifications";
+
 const router: IRouter = Router();
 
 router.use(healthRouter);
@@ -14,5 +17,7 @@ router.use(employeesRouter);
 router.use(locationsRouter);
 router.use(attendanceRouter);
 router.use(dashboardRouter);
+router.use(leavesRouter);
+router.use(notificationsRouter);
 
 export default router;
